# running_line

./: .dockerignore  .gitignore  Dockerfile  main.py  manage.py  pyproject.toml  readme.md  running_line_funcs.py
django_running_line/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
django_running_line/migrations/: 0001_initial.py  0002_alter_runninglinerequest_text.py  0003_alter_runninglinerequest_text.py  0004_alter_runninglinerequest_text.py  0005_alter_runninglinerequest_text.py  0006_runninglinerequest_bg_color_and_more.py  0007_remove_runninglinerequest_text_color_and_more.py  0008_remove_runninglinerequest_bg_color.py
django_running_line/templates/: index.html
